# rust-chat-app

./: Cargo.toml  README.md
src/: client.rs  main.rs  network.rs  ui.rs
