[package]
name = "chat_app_4"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.56.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22" ,features = ["env-filter"] }
futures = "0.3"
egui = { version = "0.33.3", features = ["serde", "accesskit" ]}
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts", 
    "glow",          
    "persistence",  
] }
egui_extras = "0.33.3"
serde = "1.0.228"
serde_json = "1.0.149"
